--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "axios": "^1.6.7",
     "clsx": "^2.1.0",
+    "framer-motion": "^11.0.12",
     "input-otp": "^1.1.0",
     "next": "14.1.0",
     "react": "^18",
